aria-label added on hard skills icons

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
                 <p class="title"><strong>Hard Skills</strong></p>
                 <div class="hard-skills-div">
                     <div class="d-flex justify-content-between">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="HTML 5">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="CSS">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="JavaScript">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/angularjs/angularjs-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="ANGULAR">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/ionic/ionic-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="IONIC">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="BOOTSTRAP">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="TypeScript">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="HTML 5" aria-label="HTML 5">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="CSS" aria-label="CSS">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="JavaScript" aria-label="JavaScript">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/angularjs/angularjs-plain.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="ANGULAR" aria-label="ANGULAR">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/ionic/ionic-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="IONIC" aria-label="IONIC">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="BOOTSTRAP" aria-label="BOOTSTRAP">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="TypeScript" aria-label="TypeScript">
                     </div>
                     <div class="d-flex justify-content-between">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/mysql/mysql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="MySQL">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="FIGMA">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/postgresql/postgresql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="POSTGRESQL">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sqlite/sqlite-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="SQLITE">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="AWS">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/nodejs/nodejs-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="NODE">
-                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/docker/docker-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="DOCKER">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/mysql/mysql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="MySQL" aria-label="MySQL">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="FIGMA" aria-label="FIGMA">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/postgresql/postgresql-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="POSTGRESQL" aria-label="POSTGRESQL">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/sqlite/sqlite-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="SQLITE" aria-label="SQLITE">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="AWS" aria-label="AWS">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/nodejs/nodejs-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="NODE" aria-label="NODE">
+                        <img src="https://raw.githubusercontent.com/devicons/devicon/1119b9f84c0290e0f0b38982099a2bd027a48bf1/icons/docker/docker-original.svg" alt="" class="skill-logo" data-toggle="tooltip" data-placement="top" title="DOCKER" aria-label="DOCKER">
                     </div>
                 </div>
 
