--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UfG/ZH4llFWOvx4tT8qc7p5Uefk6J2FdJQ+SinUC20RlAuWdyLyJcAxvWFrmJXp" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-    </script>
-
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Mario Pitta</title>
@@ -105,7 +100,7 @@
     </section>
 
 
-    <section id="about" class="container mt-3">
+    <section id="about" class="container p-5 mt-3">
 
         <div class="about-info">
             <p class="title"><strong>About Me</strong></p>
@@ -120,7 +115,7 @@
     </section>
 
 
-    <section id="skills" class="container mt-5 ">
+    <section id="skills" class="container mt-5 p-5">
         <ul class="reverse-list">
             <li>
                 <p class="description">Develop solutions to old and new problems. That's my passion. With more than 6 years on the road as a developer, I had the opportunity to face the most diverse difficulties with the most different languages, which enabled me to choose,
@@ -161,7 +156,7 @@
         </div>
     </section>
 
-    <section id="experiences" class="container mt-5 p-3">
+    <section id="experiences" class="container mt-5 p-5">
         <p class="title"><strong>Experiences</strong></p>
 
         <div class="timeline">
@@ -255,14 +250,14 @@
     <section id="projects" class="container mt-5 p-5">
         <div class="col-12">
             <p class="title center"><strong>Projects</strong></p>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-bs-slide-to="0" data-bs-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-bs-slide-to="1" data-bs-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-bs-slide-to="2" data-bs-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active" aria-current="true" aria-label="Slide 1">
                         <div class="d-flex justify-content-between" alt="First slide">
                             <img class="carousel-img d-block w-25" src="./assets/img/mvk-pizza home screen mobile.png" alt="First slide">
                             <img class="carousel-img d-block w-75" src="./assets/img/login-screen.png" alt="First slide">
@@ -285,7 +280,7 @@
                             </div> -->
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" aria-label="Slide 2">
                         <img class="carousel-img d-block w-100" src="./assets/img/henrique-do-sax screen.png" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Henrique Do Sax</h5>
@@ -295,7 +290,7 @@
                             <a class="btn btn-light" disabled>Source Code</a>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" aria-label="Slide 3">
                         <img class="carousel-img d-block w-100" src="https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Em construção</h5>
@@ -303,19 +298,17 @@
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" role="button" href="#carouselExampleIndicators" data-slide="prev">
+                <a class="carousel-control-prev" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <!-- <span class="sr-only">Previous</span> -->
                 </a>
-                <a class="carousel-control-next" role="button" href="#carouselExampleIndicators" data-slide="next">
+                <a class="carousel-control-next" role="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <!-- <span class="sr-only">Next</span> -->
                 </a>
             </div>
         </div>
     </section>
-
-
 
 
     <section id="contact" class="p-5 m-2">
@@ -378,15 +371,22 @@
         </div>
     </section>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UfG/ZH4llFWOvx4tT8qc7p5Uefk6J2FdJQ+SinUC20RlAuWdyLyJcAxvWFrmJXp" crossorigin="anonymous"></script> -->
     <script type="text/javascript">
+        const epk = 'dAsIK_gmmgh7aL_Hg';
+
+
         (function() {
             emailjs.init(epk);
         })();
 
         function sendEmail() {
 
-            const epk = 'dAsIK_gmmgh7aL_Hg'
+
             const es_id = 'service_7h09pen'
             const et_id = 'template_w0ny10r'
 
@@ -428,7 +428,7 @@
 </body>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 
 
 <script src="./assets/js/index.js"></script>
@@ -436,3 +436,14 @@
 <script src="./assets/js/typed.js"></script>
 
 </html>
+
+
+<!-- TODO REMOVER DAQUI !! -->
+<script>
+    // Branch Name
+    // scd - {{ steps.trigger.event.idShort }}-{{ steps.trigger.event.labels.length > 0 ? steps.trigger.event.labels.find(l => l.name.indexOf('1-') > - 1)[0]?.name.toLowerCase().replace(/\s+/g, '-').replace(/[^a-zA-Z0-9]/g, '') : '' }} { { steps.trigger.event.name.toLowerCase().replace(/\s+/g, '-').replace(/[^a-zA-Z0-9]/g, '') } }
+
+
+    // Issue Name
+    // SCD-{{steps.trigger.event.idShort}}-{{steps.trigger.event.labels.length > 0 ? steps.trigger.event.labels[0].name : '' }} {{steps.trigger.event.name}}
+</script>
