--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
 
         </nav>
     </section>
-    <br><br>
 
-
-
-    <section id="home" class="container mt-5 p-3">
-        <div class="info m-5 mt-3 mb-3 align-items-center">
-            <ul class="info-list p-2 d-flex justify-content-between w-100">
+    <section id="home" class="container mt-5 p-5">
+        <div class="info">
+            <!-- <ul class="info-list p-2 d-flex justify-content-between align-items-center w-100"> -->
+            <ul class="info-list d-flex justify-content-between align-items-center gap-3 w-100">
                 <li class="reverse-list">
                     <div class="justify-content-center">
                         <ul>
@@ -73,7 +71,7 @@
                                 </p>
 
                             </li>
-                            <li>
+                            <li class="justify-content-center">
                                 <span class="element"></span>
                             </li>
                         </ul>
@@ -180,7 +178,7 @@
             </div>
             <div class="tl-container right">
                 <div class="content">
-                    <h2>2021</h2>
+                    <h2>2020-2021</h2>
                     <p><strong>VEMKA CO.</strong></p>
                     <p><strong>Área de atuação:</strong> Desenvolvimento de Sistemas</p>
                     <p><strong>Atividades:</strong> Desenvolver o marketplace da marca, sendo responsável por todo layout e UI/UX responsivo da plataforma, Criação de componentes reutilizáveis para otimização do código e utilização de métodos ágeis de produtividade,
@@ -192,7 +190,7 @@
             </div>
             <div class="tl-container left">
                 <div class="content">
-                    <h2>2019</h2>
+                    <h2>2019-2021</h2>
                     <p><strong>CETREL SA.</strong></p>
                     <p><strong>Área de atuação:</strong> Desenvolvimento e suporte a Sistemas</p>
                     <p><strong>Atividades:</strong> Implementar soluções para os sistemas utilizados pela empresa para registrar as atividades corporativas, que envolviam monitoramento do ar, recebimento e tratamento de resíduos industriais, entre outras.
@@ -218,7 +216,7 @@
             </div>
             <div class="tl-container left">
                 <div class="content">
-                    <h2>2018</h2>
+                    <h2>2018-2019</h2>
                     <p><strong>SECULT - SECRETARIA DE CULTURA DO ESTADO DA BAHIA</strong></p>
                     <p><strong>Área de atuação:</strong> Suporte de informática</p>
                     <p><strong>Atividades:</strong>Suporte de informática e reparos de hardware. Orientação aos colaboradores de como usar os programas, aplicações e equipamentos disponíveis na Secretaria. Montagem e desmontagem de equipamento. Criação de
@@ -229,7 +227,7 @@
             </div>
             <div class="tl-container right">
                 <div class="content">
-                    <h2>2017</h2>
+                    <h2>2017-2018</h2>
                     <p><strong>KOFRE REPRESENTAÇÃO E COMÉRCIO DE TELECOMUNICAÇÕES LTDA</strong></p>
                     <p><strong>Área de atuação:</strong> P&D</p>
                     <p><strong>Atividades:</strong> Desenvolvimento de Sistemas para integrar com sistemas de rádio comunicação; Desenvolvimento de Sistemas para dispositivos móveis; Desenvolvimento de Sistemas integração entre sistemas de terceiros; Monitoramento
@@ -257,7 +255,17 @@
                     <li data-bs-slide-to="2" data-bs-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active" aria-current="true" aria-label="Slide 1">
+                    <div class="carousel-item active" aria-label="Slide 1">
+                        <img class="carousel-img d-block w-100" src="./assets/img/henrique-do-sax screen.png" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Henrique Do Sax</h5>
+                            <p>Portifólio de um músico saxofonista.</p>
+                            <a class="btn btn-warning" href="https://henrique-do-sax.vercel.app/" target="_blank">View
+                                Demo</a>
+                            <a class="btn btn-light" disabled>Source Code</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item " aria-current="true" aria-label="Slide 2">
                         <div class="d-flex justify-content-between" alt="First slide">
                             <img class="carousel-img d-block w-25" src="./assets/img/mvk-pizza home screen mobile.png" alt="First slide">
                             <img class="carousel-img d-block w-75" src="./assets/img/login-screen.png" alt="First slide">
@@ -280,16 +288,7 @@
                             </div> -->
                         </div>
                     </div>
-                    <div class="carousel-item" aria-label="Slide 2">
-                        <img class="carousel-img d-block w-100" src="./assets/img/henrique-do-sax screen.png" alt="Second slide">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Henrique Do Sax</h5>
-                            <p>Portifólio de um músico saxofonista.</p>
-                            <a class="btn btn-warning" href="https://henrique-do-sax.vercel.app/" target="_blank">View
-                                Demo</a>
-                            <a class="btn btn-light" disabled>Source Code</a>
-                        </div>
-                    </div>
+
                     <div class="carousel-item" aria-label="Slide 3">
                         <img class="carousel-img d-block w-100" src="https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
