--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </section>
 
 
-    <section id="contact" class="p-5 m-2">
+    <section id="contact" class="container p-5 mt-5 ">
         <div class="about-info">
             <p class="title"><strong>Contact Me</strong></p>
         </div>
@@ -326,7 +326,7 @@
 
                 <div class="col-6">
                     <label for="email" class="form-label">Your email:</label><span class="text-danger">*</span>
-                    <input type="email" name="email" id="email" class="form-control" placeholder="Type yout best email">
+                    <input type="email" name="email" id="email" class="form-control" placeholder="Type your best email">
                 </div>
 
                 <div class="col-12 mt-3">
